[package]
name = "dbc"
version = "0.4.0-dev"
authors = ["Thorsten Mürell <thorsten@muerell.de>"]
edition = "2018"

[lib]
name = "dbc"
path = "src/lib.rs"

[features]
default = ["sqlite-support", "oracle-support", "mysql-support"]

sqlite-support = ["rusqlite"]
oracle-support = ["oracle"]
mysql-support = ["mysql"]

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
rustyline = "8.2.0"
rustyline-derive = "0.4"
dirs = "3.0"
structopt = "0.3"
prettytable-rs = "^0.8"
colored = "2"
chrono = "0.4"
oracle = { version = "0.5.2", features = ["chrono"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
regex = "1"
csv = "1.1"
simple_excel_writer = "0.1"

[dependencies.rusqlite]
version = "0.25"
features = ["bundled"]
optional = true

[dependencies.postgres]
version = "0.19"
features = [ "with-chrono-0_4" ]

[dependencies.mysql]
version = "20.1"
optional = true