[package]
name = "dbc"
version = "0.5.0-dev"
authors = ["Thorsten Mürell <thorsten@muerell.de>"]
edition = "2018"

[lib]
name = "dbc"
path = "src/lib.rs"

[features]
default = ["sqlite-support", "oracle-support", "mysql-support"]

sqlite-support = ["rusqlite"]
oracle-support = ["oracle"]
mysql-support = ["mysql"]

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
rustyline = "11.0.0"
rustyline-derive = "0.8.0"
dirs = "5.0.0"
structopt = "0.3"
prettytable-rs = "^0.10"
colored = "2"
chrono = "0.4"
oracle = { version = "0.5.6", features = ["chrono"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex = "1"
csv = "1.2"
simple_excel_writer = "0.2"
byteorder = "1.4"
nu-plugin = { version = "0.79.0" }
nu-protocol = { version = "0.79.0", features = ["plugin"]}

[dependencies.rusqlite]
version = "0.29.0"
features = ["bundled"]
optional = true

[dependencies.postgres]
#git = "https://github.com/tmuerell/rust-postgres"
version = "*"
features = [ "with-chrono-0_4" ]

[dependencies.mysql]
version = "23.0"
optional = true
